:wrench: ESLint 및 Prettier 기본 설정
Co-authored-by: Minji <chosim-dvlpr@users.noreply.github.com>

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -20,7 +20,23 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Path */
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["./*"],
+      "@/pages/*": ["./pages/*"],
+      "@/components/*": ["./components/*"],
+      "@/apis/*": ["./apis/*"],
+      "@/hooks/*": ["./hooks/*"],
+      "@/queries/*": ["./queries/*"],
+      "@/utils/*": ["./utils/*"],
+      "@/mocks/*": ["./mocks/*"],
+      "@/constants/*": ["./constants/*"],
+      "@/assets/*": ["./assets/*"],
+      "@/styles/*": ["./styles/*"]
+    }
   },
   "include": ["src"]
 }
