chore: 좌표를 저장하기 위해 hibernate spatial 의존성 추가

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+	// Hibernate-Spatial(geometry 지원)
+	implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '6.6.2.Final'
+
 	// MySQL - prod
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
