--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.rest-assured:rest-assured:5.3.1'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
