🔥 불필요한 코드 삭제

--- a/.github/workflows/frontend_dev_ci.yml
+++ b/.github/workflows/frontend_dev_ci.yml
@@ -64,9 +64,7 @@ jobs:
 
       - name: Run build
         id: yarn_build
-        run: |
-          pwd
-          yarn build
+        run: yarn build
 
       - name: Save Run build result
         id: yarn_build_result
@@ -107,9 +105,6 @@ jobs:
         run: |
           storybook_url=$(grep -o 'https://67604086bae1648966795b11-[a-z0-9]*\.chromatic\.com/' chromatic-log.txt | head -n 1)
           echo "storybook_url=${storybook_url}" >> $GITHUB_OUTPUT
-
-      - name: Debug Chromatic Output
-        run: echo "${{ steps.set_storybook_url.outputs.storybook_url }}"
 
       - name: Get Current Time
         uses: josStorer/get-current-time@v2
