--- a/.github/workflows/frontend_dev_ci.yml
+++ b/.github/workflows/frontend_dev_ci.yml
@@ -4,30 +4,13 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
-  PATH_CHANGES:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./frontend
-
-    permissions:
-      pull-requests: read
-    outputs:
-      frontend: ${{ steps.changes.outputs.frontend }}
-
-    steps:
-      - uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            frontend:
-              - 'frontend/**'
-
   FE_CI:
     runs-on: ubuntu-latest
-    needs: PATH_CHANGES
     permissions:
       contents: read
       packages: write
@@ -51,8 +34,17 @@ jobs:
         with:
           node-version: '20.15.1'
 
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        id: cache-deps
+        with:
+          path: ./frontend/node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules-
+
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run lint
         id: yarn_lint
@@ -76,6 +68,7 @@ jobs:
       run:
         working-directory: ./frontend
     needs: FE_CI
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -87,8 +80,18 @@ jobs:
         with:
           node-version: '20.15.1'
 
-      - name: Install dependencies
-        run: yarn install
+      - name: Restore node_modules cache
+        uses: actions/cache@v3
+        id: cache-deps
+        with:
+          path: ./frontend/node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules-
+
+      - name: Verify dependencies
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: yarn install --frozen-lockfile
 
       - name: Publish Storybook
         id: publish_storybook
