--- a/.github/workflows/frontend_dev_ci.yml
+++ b/.github/workflows/frontend_dev_ci.yml
@@ -122,7 +122,7 @@ jobs:
 
   GITHUB_BOT_STORYBOOK:
     runs-on: ubuntu-latest
-    needs: [publish-storybook]
+    needs: [PUBLISH_STORYBOOK]
     steps:
       - name: Record PR Comment
         uses: thollander/actions-comment-pull-request@v2
@@ -130,5 +130,5 @@ jobs:
           comment_tag: ${{github.event.number}}-storybook
           message: |
             **Storybook Published**  
-            💄 [View Storybook](${{ needs.publish-storybook.outputs.storybook_url }})
-            🕖 Update Time : ${{ needs.publish-storybook.outputs.current_time }}
+            💄 [View Storybook](${{ needs.PUBLISH_STORYBOOK.outputs.storybook_url }})
+            🕖 Update Time : ${{ needs.PUBLISH_STORYBOOK.outputs.current_time }}
