--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -49,10 +49,12 @@ dependencies {
 	// AWS
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+	// S3 mock
+	implementation 'io.findify:s3mock_2.12:0.2.4'
+
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.rest-assured:rest-assured:5.5.0'
-	testImplementation 'io.findify:s3mock_2.12:0.2.4'	// S3 mock 테스트
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
