--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -4,12 +4,11 @@ spring:
   config:
     activate:
       on-profile: local
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/christmas?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-    username: root
-    password: 15911591
+    url: jdbc:mysql://127.0.0.1:3306/christmas?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+    username: ${MYSQL_USER:root}
+    password: ${MYSQL_PASSWORD:15911591}
 
   servlet:
     multipart:
