--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -7,8 +7,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/christmas?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-    username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:15911591}
+    username: root
+    password: 15911591
 
   servlet:
     multipart:
