--- a/.github/workflows/be-test-dev.yml
+++ b/.github/workflows/be-test-dev.yml
@@ -36,6 +36,15 @@ jobs:
           mysql database: christmas
           mysql root password: 15911591
 
+      - name: Wait for MySQL to be ready
+        run: |
+          for i in {1..10}; do
+            nc -zv 127.0.0.1 3306 && echo "MySQL is ready" && exit 0
+            echo "Waiting for MySQL..."
+            sleep 5
+          done
+          echo "MySQL failed to start in time" && exit 1
+
       - name: Grant Execute Permission For Gradlew
         run: chmod +x gradlew
 
