chore: 테스트 성공 여부에 따라 로그 색상을 주는 옵션 추가

--- a/.github/workflows/be-test-dev.yml
+++ b/.github/workflows/be-test-dev.yml
@@ -38,4 +38,4 @@ jobs:
         run: ./gradlew clean build -Dspring.profiles.active=${{ env.SPRING_PROFILE }} --exclude-task test
 
       - name: Running Test Code
-        run: ./gradlew --info test -Dspring.profiles.active=${{ env.SPRING_PROFILE }}
+        run: ./gradlew --info test --console=rich -Dspring.profiles.active=${{ env.SPRING_PROFILE }}
