fix: context - 도커 빌드 수행 위치, file: Dockerfile 위치에 맞게 수정

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -42,7 +42,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./backend
-          file: docker/Dockerfile
+          file: ./backend/docker/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_REPO_NAME }}/christmas-springboot-app:${{ env.SPRING_PROFILE }}
           build-args: |
