chore: 도커 컴포즈에 env_file 설정해서 스프링부트에서도 사용할 수 있게 함

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -47,6 +47,7 @@ jobs:
           tags: ${{ secrets.DOCKER_REPO_NAME }}/christmas-springboot-app:${{ env.SPRING_PROFILE }}
           build-args: |
             SPRING_PROFILE=${{ env.SPRING_PROFILE }}
+          no-cache: true
 
       - name: Upload docker-compose yaml script to artifact
         uses: actions/upload-artifact@v4
