--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   springboot:
     container_name: christmas_springboot
     image: ${DOCKER_REPO_NAME}/christmas-springboot-app:${DOCKER_IMAGE_VERSION}
+    env_file:
+      - .christmas-env
     ports:
       - 8080:8080
     restart: on-failure
