chore: 새로 생성된 이미지를 도커 컨테이너가 사용하는지 테스트하기 위한 변경사항

--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -5,4 +5,4 @@ COPY ${JAR_FILE} /christmas-app.jar
 
 ARG SPRING_PROFILE
 ENV PROFILE_ENV=${SPRING_PROFILE}
-ENTRYPOINT ["sh", "-c", "java -jar -Dspring.profiles.active=${PROFILE_ENV} /christmas-app.jar"]
+ENTRYPOINT ["sh", "-c", "java -jar -Dspring.profiles.active=$PROFILE_ENV /christmas-app.jar"]
