chore: 이전 환경의 도커 컨테이너 내릴 때 이미지도 함께 삭제 & 항상 새로운 이미지를 pull하도록 수정

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -95,13 +95,14 @@ jobs:
           DOCKER_IMAGE_VERSION=${{ env.SPRING_PROFILE }}
           EOF
 
-      - name: Stop and remove existing containers
+      - name: Stop and Remove existing container and image
         run: |
           sudo docker-compose -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml down
+          sudo docker image prune -f
 
-      - name: Start new containers
+      - name: Start new container
         run: |
-          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.christmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml up -d
+          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.christmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml up --pull always -d
 
       - name: Check container status
         run: |
