[BE] CI/CD 스크립트 작성 Issue #56 (#58)
* chore: local profile로 테스트 진행하는 테스트용 스크립트 추가

* chore: mysql 버전 latest 대신 8로 고정, env 수정

* chore: 동적으로 yml에 mysql 유저 정보를 넣도록 수정

* chore: service 대신 mirromutth/mysql-action 으로 대체

* chore: mysql 시작 기다리고 진행

* refactor: Jpa 레포지토리에서 @Query 사용할 때 파라미터에 @Param 어노테이션 추가

* refactor: 직접 명령어로 profile 주입하는 방식으로 변경

* chore: Build 명령어 변경

* chore: 필요하지 않은 설정 제거

* chore: 테스트 실패 시 ci가 통과하지 않는지 확인하기 위해 실패하는 테스트 추가

* chore: 테스트 성공 여부에 따라 로그 색상을 주는 옵션 추가

* chore: 테스트 실패 시 ci 실패 결과 확인 후 테스트 모두 성공하도록 수정

* chore: 운영 CI/CD 스크립트 추가

* chore: docker-compose 및 Dockerfile 추가

* chore: 테스트 스크립트 파일명 수정, 빌드 시 Plain jar 파일이 안남도록 설정 추가

* chore: 테스트를 위해 pr에 push 될 때도 cicd 적용

* fix: Dockerfile 경로 수정

* fix: Dockerfile 경로 수정

* fix: Dockerfile 경로 수정

* fix: context - 도커 빌드 수행 위치, file: Dockerfile 위치에 맞게 수정

* fix: context - 도커 빌드 수행 위치, file: Dockerfile 위치에 맞게 수정

* chore: 도커 컴포즈 env 추출을 도커 컴포즈 다운로드 이후로 변경

* chore: 도커 파일 이동 명령어 수정

* chore: artifact로 다운로드 받은 도커 컴포즈 경로 변경

* chore: pr 트리거 추가(테스트용)

* chore: 도커 명령어에 sudo 추가

* chore: application yml 환경변수 추가

* chore: 도커 컴포즈에 env_file 설정해서 스프링부트에서도 사용할 수 있게 함

* chore: 새로 생성된 이미지를 도커 컨테이너가 사용하는지 테스트하기 위한 변경사항

* chore: 이전 환경의 도커 컨테이너 내릴 때 이미지도 함께 삭제 & 항상 새로운 이미지를 pull하도록 수정

* chore: 예전 이미지 삭제 과정을 새로운 컨테이너 올린 뒤로 이동

* chore: 테스트 용도 트리거 삭제

* chore: 스웨거 path에 api prefix 추가

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -4,10 +4,9 @@ spring:
   config:
     activate:
       on-profile: local
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/christmas?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/christmas
     username: root
     password: 15911591
 
@@ -28,7 +27,7 @@ springdoc:
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
   swagger-ui:
-    path: /api-docs
+    path: /api/api-docs
     disable-swagger-default-url: true
     display-request-duration: true
 
