chore: 액션 러너 라벨 변경

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -55,7 +55,7 @@ jobs:
 
   deploy:
     environment: production
-    runs-on: [ "merrytreesmas-prod-a" ]
+    runs-on: [ "merrytreesmas-prod" ]
     env:
       SPRING_PROFILE: prod
     needs: build
