chore: 스프링부트 컨테이너, env 파일 이름 변경

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Set docker-compose environment variables
         run: |
-          cat <<EOF > ${{ secrets.DOCKER_COMPOSE_PATH }}/.christmas-env
+          cat <<EOF > ${{ secrets.DOCKER_COMPOSE_PATH }}/.treesmas-env
           # Profile
           SPRING_PROFILE=${{ env.SPRING_PROFILE }}
           
