--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   springboot:
-    container_name: christmas_springboot
+    container_name: treesmas-springboot
     image: ${DOCKER_REPO_NAME}/christmas-springboot-app:${DOCKER_IMAGE_VERSION}
     env_file:
-      - .christmas-env
+      - .treesmas-env
     ports:
       - 8080:8080
     restart: on-failure
