chore: christmas -> tressmas로 네이밍 변경

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -44,7 +44,7 @@ jobs:
           context: ./backend
           file: ./backend/docker/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_REPO_NAME }}/christmas-springboot-app:${{ env.SPRING_PROFILE }}
+          tags: ${{ secrets.DOCKER_REPO_NAME }}/treesmas-springboot-app:${{ env.SPRING_PROFILE }}
           build-args: |
             SPRING_PROFILE=${{ env.SPRING_PROFILE }}
           no-cache: true
@@ -52,7 +52,7 @@ jobs:
       - name: Upload docker-compose yaml script to artifact
         uses: actions/upload-artifact@v4
         with:
-          name: christmas-docker-compose
+          name: treesmas-docker-compose
           path: ${{ github.workspace }}/backend/docker/docker-compose.yml
 
   deploy:
@@ -69,7 +69,7 @@ jobs:
       - name: Download docker-compose yaml script to runner
         uses: actions/download-artifact@v4
         with:
-          name: christmas-docker-compose
+          name: treesmas-docker-compose
           path: ${{ github.workspace }}/backend/docker
 
       - name: Move docker-compose YAML
@@ -102,7 +102,7 @@ jobs:
 
       - name: Start new container
         run: |
-          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.christmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml up --pull always -d
+          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.treesmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml up --pull always -d
 
       - name: Remove old images
         run: |
