[BE] CI CD 테스트 Issue #74 (#76)
* chore: 액션 러너 라벨 변경

* chore: mysql 테이블 세팅을 위해 ddl-auto create로 변경

* chore: 스프링부트 컨테이너, env 파일 이름 변경

* chore: 테스트를 위해 pr 트리거 추가

* chore: christmas -> tressmas로 네이밍 변경

* chore: ddl-auto validate으로 변경

* refactor: s3 사용 중 예외가 발생했을 때 로그 추가

* refactor: 로그 수정

* refactor: pr 트리거 제거

* chore: db에 테이블 생성

* chore: ddl-auto validate으로 변경

* chore: 트리거 삭제

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -3,7 +3,6 @@ name: 🎄Backend CI & CD With Prod Profile
 on:
   push:
     branches: [ "main", "BE/dev" ]
-
 jobs:
   build:
     environment: production
@@ -42,7 +41,7 @@ jobs:
           context: ./backend
           file: ./backend/docker/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_REPO_NAME }}/christmas-springboot-app:${{ env.SPRING_PROFILE }}
+          tags: ${{ secrets.DOCKER_REPO_NAME }}/treesmas-springboot-app:${{ env.SPRING_PROFILE }}
           build-args: |
             SPRING_PROFILE=${{ env.SPRING_PROFILE }}
           no-cache: true
@@ -50,7 +49,7 @@ jobs:
       - name: Upload docker-compose yaml script to artifact
         uses: actions/upload-artifact@v4
         with:
-          name: christmas-docker-compose
+          name: treesmas-docker-compose
           path: ${{ github.workspace }}/backend/docker/docker-compose.yml
 
   deploy:
@@ -67,7 +66,7 @@ jobs:
       - name: Download docker-compose yaml script to runner
         uses: actions/download-artifact@v4
         with:
-          name: christmas-docker-compose
+          name: treesmas-docker-compose
           path: ${{ github.workspace }}/backend/docker
 
       - name: Move docker-compose YAML
@@ -76,7 +75,7 @@ jobs:
 
       - name: Set docker-compose environment variables
         run: |
-          cat <<EOF > ${{ secrets.DOCKER_COMPOSE_PATH }}/.christmas-env
+          cat <<EOF > ${{ secrets.DOCKER_COMPOSE_PATH }}/.treesmas-env
           # Profile
           SPRING_PROFILE=${{ env.SPRING_PROFILE }}
           
@@ -100,7 +99,7 @@ jobs:
 
       - name: Start new container
         run: |
-          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.christmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml up --pull always -d
+          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.treesmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml up --pull always -d
 
       - name: Remove old images
         run: |
