Revert "[BE] CI CD 테스트 Issue #74 (#76)"
This reverts commit 176fb301a1e4562c1fcbe0fd7c5237e900345a3b.

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -3,6 +3,7 @@ name: 🎄Backend CI & CD With Prod Profile
 on:
   push:
     branches: [ "main", "BE/dev" ]
+
 jobs:
   build:
     environment: production
@@ -41,7 +42,7 @@ jobs:
           context: ./backend
           file: ./backend/docker/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_REPO_NAME }}/treesmas-springboot-app:${{ env.SPRING_PROFILE }}
+          tags: ${{ secrets.DOCKER_REPO_NAME }}/christmas-springboot-app:${{ env.SPRING_PROFILE }}
           build-args: |
             SPRING_PROFILE=${{ env.SPRING_PROFILE }}
           no-cache: true
@@ -49,7 +50,7 @@ jobs:
       - name: Upload docker-compose yaml script to artifact
         uses: actions/upload-artifact@v4
         with:
-          name: treesmas-docker-compose
+          name: christmas-docker-compose
           path: ${{ github.workspace }}/backend/docker/docker-compose.yml
 
   deploy:
@@ -66,7 +67,7 @@ jobs:
       - name: Download docker-compose yaml script to runner
         uses: actions/download-artifact@v4
         with:
-          name: treesmas-docker-compose
+          name: christmas-docker-compose
           path: ${{ github.workspace }}/backend/docker
 
       - name: Move docker-compose YAML
@@ -75,7 +76,7 @@ jobs:
 
       - name: Set docker-compose environment variables
         run: |
-          cat <<EOF > ${{ secrets.DOCKER_COMPOSE_PATH }}/.treesmas-env
+          cat <<EOF > ${{ secrets.DOCKER_COMPOSE_PATH }}/.christmas-env
           # Profile
           SPRING_PROFILE=${{ env.SPRING_PROFILE }}
           
@@ -99,7 +100,7 @@ jobs:
 
       - name: Start new container
         run: |
-          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.treesmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml up --pull always -d
+          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.christmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/docker-compose.yml up --pull always -d
 
       - name: Remove old images
         run: |
