--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM amazoncorretto:17
 
 ARG JAR_FILE=build/libs/christmas-0.0.1-SNAPSHOT.jar
-COPY ${JAR_FILE} /treesmas-app.jar
+COPY ${JAR_FILE} /christmas-app.jar
 
 ARG SPRING_PROFILE
 ENV PROFILE_ENV=${SPRING_PROFILE}
-ENTRYPOINT ["sh", "-c", "java -jar -Dspring.profiles.active=$PROFILE_ENV /treesmas-app.jar"]
+ENTRYPOINT ["sh", "-c", "java -jar -Dspring.profiles.active=$PROFILE_ENV /christmas-app.jar"]
