chore: Webflux 의존성 추가 및 카카오맵 시크릿 값 추가

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -45,3 +45,10 @@ cloud:
     stack:
       auto: false
 
+server:
+  url: ${SERVER_URL}
+
+map:
+  kakao:
+    rest-api-key: ${KAKAO_MAP_REST_API_KEY}
+    default-url: https://dapi.kakao.com/v2/local
