--- a/.github/workflows/be-test.yml
+++ b/.github/workflows/be-test.yml
@@ -8,7 +8,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     env:
-      SPRING_PROFILE: local
+      SPRING_PROFILE: test
     defaults:
       run:
         working-directory: ./backend
