chore: ci 시 test 프로파일을 사용하도록 변경

--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
     name: christmas
   config:
     activate:
-      on-profile: local
+      on-profile: test
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/christmas
