[BE] 코스 추천 & 볼거리 추천 api 구현 Issue #67 (#86)
* chore: gitignore에 application-local.yml 추가

* chore: Webflux 의존성 추가 및 카카오맵 시크릿 값 추가

* feat: 카카오맵 REST api를 활용해서 특정 위치의 2km 경로 안에 있는 장소를 원하는 키워드로 찾을 수 있도록 기능 추가

* feat: 코스 추천 api 완

* refactor: 로깅 메세지 변경 및 예외처리 추가

* refactor: 키워드로 장소 검색 시 예외 처리 추가 및 파일 위치 변경

* chore: application-local.yml 원격저장소에서 삭제

* feat: 볼거리 3가지 추천 api 구현 완료

* fix: 점심, 저녁 리스트에서 저녁 값을 잘못 가져온 로직 수정

* docs: 추천 볼거리 api 문서화 추가

* refactor: CustomException의 invalidData value 자료형 String -> Object로 수

* feat: 코스 경로의 도보 시간 & 시설물 정보를 함께 반환

* fix: 로그 수정 및 카테고리로 장소 검색 시 condition에 무조건 카테고리가 들어가도록 수

* refactor: CustomException에 원인 예외도 저

* refactor: 카카오맵, 티맵 사용한 로직의 패키지 구조 변경

* chore: 티맵 시크릿 변수 추가

* fix: 변경된 path variable 이름으로 테스트 수정

* chore: 테스트 용 application.yml 추가

* chore: ci 시 test 프로파일을 사용하도록 변경

* chore: 테스트 spring profile 환경 변수 추가

--- a/.github/workflows/be-test.yml
+++ b/.github/workflows/be-test.yml
@@ -1,4 +1,4 @@
-name: 🎄Backend Build & Test With Local Profile
+name: 🎄Backend Build & Test With Test Profile
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     env:
-      SPRING_PROFILE: local
+      SPRING_PROFILE: test
     defaults:
       run:
         working-directory: ./backend
