--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -45,3 +45,13 @@ cloud:
     stack:
       auto: false
 
+server:
+  url: ${SERVER_URL}
+
+map:
+  kakao:
+    rest-api-key: ${KAKAO_MAP_REST_API_KEY}
+    default-url: https://dapi.kakao.com/v2/local
+  tmap:
+    app-key: ${TMAP_APP_KEY}
+    default-url: https://apis.openapi.sk.com/tmap/routes
