--- a/.github/workflows/frontend_dev_ci.yml
+++ b/.github/workflows/frontend_dev_ci.yml
@@ -3,6 +3,8 @@ name: ✨ Frontend Dev CI
 on:
   pull_request:
     types: [opened, reopened, synchronize]
+    branches:
+      - FE/dev
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
