--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -64,6 +64,10 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+test {
+	systemProperty 'spring.profiles.active', 'test-code'
+}
+
 jar {
 	enabled=false
 }
