chore: 테스트 cd 스크립트 수정

--- a/.github/workflows/be-test-ci_cd.yml
+++ b/.github/workflows/be-test-ci_cd.yml
@@ -97,7 +97,7 @@ jobs:
 
       - name: Stop and Remove existing container
         run: |
-          sudo docker-compose -f ${{ secrets.DOCKER_COMPOSE_PATH }}/test-docker-compose.yml down
+          sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.treesmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/test-docker-compose.yml down
           sudo docker image prune -f
 
       - name: Start new container
