[BE] 테스트 서버 CICD 스크립트 Issue #119 (#120)
* chore: 테스트 서버 환경 추가, 테스트 코드용 프로파일 추가

* chore: 테스트 서버용 & 테스트 코드용 yml 분리

* chore: 테스트(개발)서버 CI/CD 스크립트 추가

* chore: 테스트 코드 확인용 스크립트 추가

* chore: 테스트용 pull request 트리거 추가

* chore: 테스트용 도커 컴포즈 파일 업로드

* chore: 테스트용 도커 컴포즈 파일 업로드

* chore: 테스트 cd 스크립트 수정

* chore: 도커 컴포즈 수정

* chore: jpa 설정 create로 변경

* chore: test cd 트리거 pull request 제거

--- a/.github/workflows/be-pr_testing.yml
+++ b/.github/workflows/be-pr_testing.yml
@@ -1,4 +1,4 @@
-name: 🎄Backend Build & Test With Test Profile
+name: 🎄Backend Run Test Code
 
 on:
   pull_request:
@@ -7,8 +7,6 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    env:
-      SPRING_PROFILE: test
     defaults:
       run:
         working-directory: ./backend
@@ -35,7 +33,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build Application
-        run: ./gradlew clean build -Dspring.profiles.active=${{ env.SPRING_PROFILE }} --exclude-task test
+        run: ./gradlew clean build --exclude-task test
 
       - name: Running Test Code
-        run: ./gradlew --info test -Dspring.profiles.active=${{ env.SPRING_PROFILE }}
+        run: ./gradlew --info test
