chore: 브랜치명 main -> BE/main 변경

--- a/.github/workflows/be-pr_testing.yml
+++ b/.github/workflows/be-pr_testing.yml
@@ -2,7 +2,7 @@ name: 🎄Backend Run Test Code
 
 on:
   pull_request:
-    branches: [ "BE/dev", "main"]
+    branches: [ "BE/dev", "BE/main"]
 
 jobs:
   build-and-test:
