--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,8 +39,14 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	// Jsoup
+	implementation 'org.jsoup:jsoup:1.18.3'
+
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
+	// Selenium
+	implementation 'org.seleniumhq.selenium:selenium-java'
 
 	// Hibernate-Spatial(geometry 지원)
 	implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '6.6.2.Final'
