--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/src/main/resources/application-local.yml
+**/resources/driver/
+
 ### STS ###
 .apt_generated
 .classpath
