--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/src/main/resources/application-local.yml
-**/resources/driver/
+**/resources/driver/chromedriver-mac
 
 ### STS ###
 .apt_generated
