chore: 테스트 서버 확인용 CD 스크립트 변경

--- a/.github/workflows/be-test-ci_cd.yml
+++ b/.github/workflows/be-test-ci_cd.yml
@@ -3,7 +3,8 @@ name: 🎄Backend CI & CD With Test Profile
 on:
   push:
     branches: [ "BE/dev" ]
-
+  pull_request:
+    branches: [ "BE/dev" ]
 jobs:
   build:
     environment: test
