fix: 올바른 os 명령어로 변경

--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -1,22 +1,18 @@
-FROM amazoncorretto:17
+FROM amazonlinux:2023
 
 # 크롬 및 유틸리티 설치
-RUN apt-get update && apt-get install -y \
-    wget \
-    unzip \
-    curl \
-    gnupg \
-    && wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb \
-    && apt install -y ./google-chrome-stable_current_amd64.deb \
-    && rm google-chrome-stable_current_amd64.deb
+RUN dnf install -y wget unzip curl gzip shadow-utils \
+ && wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm \
+ && dnf install -y ./google-chrome-stable_current_x86_64.rpm \
+ && rm google-chrome-stable_current_x86_64.rpm
 
 # 크롬드라이버 설치
-RUN CHROME_DRIVER_VERSION=$(curl -sSL https://chromedriver.storage.googleapis.com/LATEST_RELEASE) \
-    && curl -sSL https://chromedriver.storage.googleapis.com/${CHROME_DRIVER_VERSION}/chromedriver_linux64.zip -o chromedriver.zip \
-    && unzip chromedriver.zip \
-    && mv chromedriver /usr/local/bin/chromedriver \
-    && chmod +x /usr/local/bin/chromedriver \
-    && rm chromedriver.zip
+RUN LATEST=$(curl -sSL https://chromedriver.storage.googleapis.com/LATEST_RELEASE) \
+ && wget https://chromedriver.storage.googleapis.com/${LATEST}/chromedriver_linux64.zip \
+ && unzip chromedriver_linux64.zip \
+ && mv chromedriver /usr/local/bin/ \
+ && chmod +x /usr/local/bin/chromedriver \
+ && rm chromedriver_linux64.zip
 
 ARG JAR_FILE=build/libs/christmas-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} /treesmas-app.jar
